updated path to server in fetchAll

--- a/starter-code/public/new.html
+++ b/starter-code/public/new.html
@@ -66,7 +66,10 @@
           <label>
             <input type="checkbox" id="article-published"> Published
           </label>
+          <!-- <div> -->
           <!-- add submit button -->
+            <!-- <button type="submit">Post It!</button> -->
+          <!-- </div> -->
         </form>
       </section>
       <section id="articles" class="tab-content">
