--- a/public/new.html
+++ b/public/new.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lab 7</title>
     <link rel="stylesheet" href="vendor/styles/normalize.css">
-    <link rel="stylesheet" href="vendor/styles/icons.css">
+    <link rel="stylesheet" href="styles/icons.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
@@ -40,8 +40,9 @@
       <nav class="main-nav">
         <div class="icon-menu"></div>
         <ul>
-          <li class="tab" data-content="write"><a href="#" class="icon-home"> Write</a></li>
-          <li class="tab" data-content="articles"><a href="#" class="icon-home"> Preview</a></li>
+          <li class="tab" data-content="write"><a href="#" class="icon-checkmark"> Write</a></li>
+          <li class="tab" data-content="articles"><a href="#" class="icon-rocket"> Preview</a></li>
+          <li><a href="index.html" class="icon-home"> Home</a></li>
         </ul>
       </nav>
     </header>
